WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192540
[GStreamer] Can't replay blob videos in web.whatsapp.com
https://bugs.webkit.org/show_bug.cgi?id=192540
Summary
[GStreamer] Can't replay blob videos in web.whatsapp.com
André Costa
Reported
2018-12-09 06:39:46 PST
When I try to play animated GIFs or videos through Whatsapp Web interface on Epiphany, they play just the first time, further attempts fail (the multimedia controls appears, but are not responsive, and the video/GIF image is replaced by a white square). I am on Fedora 29, these are the relevant packages installed: webkit2gtk3-plugin-process-gtk2-2.22.4-1.fc29.x86_64 webkit2gtk3-2.22.4-1.fc29.x86_64 webkit2gtk3-jsc-2.22.4-1.fc29.x86_64 gstreamer1-libav-1.14.3-1.fc29.x86_64 gstreamer-plugins-base-0.10.36-18.fc27.x86_64 gstreamer1-plugins-ugly-1.14.3-1.fc29.x86_64 gstreamer1-plugins-good-1.14.4-1.fc29.x86_64 gstreamer1-plugins-base-1.14.4-1.fc29.x86_64 gstreamer-0.10.36-18.fc27.x86_64 gstreamer1-1.14.4-1.fc29.x86_64 gstreamer1-plugins-good-gtk-1.14.4-1.fc29.x86_64 gstreamer-plugins-bad-free-0.10.23-47.fc29.x86_64 gstreamer-tools-0.10.36-18.fc27.x86_64 PackageKit-gstreamer-plugin-1.1.12-1.fc29.x86_64 gstreamer1-plugins-bad-1.14.4-2.fc29.x86_64 Please let me know if I can provide any additional info.
Attachments
Patch
(2.86 KB, patch)
2020-05-13 04:45 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2018-12-09 10:12:05 PST
This has been happening for at least half a year or so, on normal non-YouTube video elements. It's not reliably reproducible for me but happens maybe 50% of the time.
Michael Catanzaro
Comment 2
2018-12-09 10:12:25 PST
(In reply to Michael Catanzaro from
comment #1
)
> This has been happening for at least half a year or so, on normal > non-YouTube video elements. It's not reliably reproducible for me but > happens maybe 50% of the time.
i.e. this is definitely not specific to Whatsapp.
Alicia Boya García
Comment 3
2018-12-10 07:01:13 PST
This is a known bug in the current MSE implementation.
Michael Catanzaro
Comment 4
2018-12-10 07:15:40 PST
Could it be related to
bug #192530
? I have a feeling a LOT of our weird problems video problems could be related to that issue.
Michael Catanzaro
Comment 5
2019-06-24 11:54:33 PDT
(In reply to Alicia Boya García from
comment #3
)
> This is a known bug in the current MSE implementation.
Any plans to fix it? This is really bad.
Alicia Boya García
Comment 6
2019-06-25 06:05:03 PDT
(In reply to Michael Catanzaro from
comment #5
)
> (In reply to Alicia Boya García from
comment #3
) > > This is a known bug in the current MSE implementation. > > Any plans to fix it? This is really bad.
Yes. I'm taking this in mind in my rework of the playback pipeline, but that is a long task.
Philippe Normand
Comment 7
2020-05-09 03:53:16 PDT
Is this really a MSE issue? At least audios are played using <audio> here, over blob: URIs. See
bug 211627
.
Philippe Normand
Comment 8
2020-05-13 04:45:42 PDT
Created
attachment 399252
[details]
Patch
EWS
Comment 9
2020-05-14 01:27:01 PDT
Committed
r261680
: <
https://trac.webkit.org/changeset/261680
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399252
[details]
.
Radar WebKit Bug Importer
Comment 10
2020-05-14 01:28:15 PDT
<
rdar://problem/63219296
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug