Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -2119,6 +2119,8 @@ void MediaPlayerPrivateGStreamer::updateBufferingStatus(GstBufferingMode mode, d
 
     if (!m_didDownloadFinish)
         m_isBuffering = true;
+    else
+        m_fillTimer.stop();
 
     m_bufferingPercentage = percentage;
     switch (mode) {
